--- a/src/styles/mission.css
+++ b/src/styles/mission.css
@@ -7,6 +7,7 @@
   justify-content: center;
   overflow: hidden;
   box-sizing: border-box;
+  max-width: 100%;
 }
 
 .mission-bg {
